Fixed css overflow on homepage

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@
 
 	}
 
-	body {
+	html, body {
 		background-image: url(/static/background7.png);
 		background-repeat: no-repeat;
 		background-size: cover;
